namespace pg3302_Eksamen.players.Interface
{
    public interface IPlayer : ISeeIfWins, IShowHand, IQuarantine, IAddCardToHand, IRemoveCardFromHand
    {
    }
}