namespace pg3302_Eksamen.players.Interface
{
    public interface IQuarantine
    {
        void SetQuarantine();
    }
}