namespace pg3302_Eksamen.players.Interface
{
    public interface IRemoveCardFromHand
    {
        void RemoveCardFromHand();
        void RemoveAllCardFromHand();
    }
}