namespace pg3302_Eksamen.players.Interface
{
    public interface IShowHand
    {
        void ShowHand();
    }
}