namespace pg3302_Eksamen.players.Interface
{
    public interface ISeeIfWins
    {
        bool SeeIfWins();
    }
}